fix:icon align in filter select

--- a/src/App.css
+++ b/src/App.css
@@ -859,4 +859,5 @@ code {
 i.material-icons {
     font-size: inherit;
     position: relative;
+    top:2px;
 }
